[package]
name = "hookrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
axum = "0.4.6"
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.1"
crypto = { version = "0.3.0" }
dotenv = "0.15.0"
futures = "0.3.21"
hex = "0.4.3"
hmac = "0.12.1"
hyper = "0.14.17"
once_cell = "1.10.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["default-tls", "json"] }
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tower-http = { version = "0.2.4", features = ["full"] }
tracing = "0.1.31"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tracing-tree = "0.2.0"
url = "2.2.2"
which = "4.2.4"

[profile.release]
debug = 1

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.2.0"
pseudo = "0.2.0"
tempfile = "3.3.0"
wiremock = "0.5.11"
